tests/ui/suggestions/range-index-instead-of-colon.stderr
error: expected one of `.`, `?`, `]`, or an operator, found `:`
  --> $DIR/range-index-instead-of-colon.rs:4:17
   |
LL |     &[1, 2, 3][1:2];
   |                 ^ expected one of `.`, `?`, `]`, or an operator
   |
help: you might have meant to make a slice with range index
   |
LL |     &[1, 2, 3][1..2];
   |                 ~~

error: aborting due to 1 previous error

